8398 pcmcia: sizeof on array function parameter Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>